samples/_failures_safe/1761078484_e6c5e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18308c9c.c: In function ‘main’:
./samples/SAFE/__tmp_18308c9c.c:155:25: error: missing terminating " character
  155 |         fprintf(stderr, "Failed
      |                         ^~~~~~~
./samples/SAFE/__tmp_18308c9c.c:155:9: error: expected expression at end of input
  155 |         fprintf(stderr, "Failed
      |         ^~~~~~~
./samples/SAFE/__tmp_18308c9c.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_18308c9c.c:155:9: error: expected declaration or statement at end of input
